--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -494,9 +494,17 @@ body,.background{
 
 .gridsitemap{
   display: grid;
-  grid-template-columns: repeat(12,1fr);
+  grid-template-columns: repeat(15,1fr);
   grid-template-rows: repeat(24,minmax(150px,auto));
   }
+
+.gridsitemap article h2 {
+  font-size: 2.4em;
+}
+
+.gridsitemap article h3 {
+  font-size: 1.7em;
+}
 
 #sitemapheader{
   margin-top: 18vh;
@@ -508,109 +516,104 @@ body,.background{
   color: #fff;
 }
 
-main section .grid a,h2,ul,li{
+main section .grid a,h2,ul,li,h3{
   color: white;
 }
 
 #homepagesitemap{
   grid-column: 2/4;
-  grid-row: 1/4;
-}
-
-#popularsitemap{
-  grid-column: 4/6;
-  grid-row: 1/4;
-}
-
-#fpssitemap{
-  grid-column: 6/8;
-  grid-row: 1/4;
-}
-
-#rpgsitemap{
-  grid-column: 8/10;
-  grid-row: 1/4;
-}
-
-#sportsitemap{
-  grid-column: 10/12;
-  grid-row: 1/4;
-}
-
-#platformersitemap{
-  grid-column: 4/6;
-  grid-row: 4/8;
-}
-
-#horrorsitemap{
-  grid-column: 6/8;
-  grid-row: 4/8;
-}
-
-#racingsitemap{
-  grid-column: 8/10;
-  grid-row: 4/8;
-}
-
-#adventuresitemap{
-  grid-column: 10/12;
-  grid-row: 4/8;
-}
-
-#fightingsitemap{
-  grid-column: 4/6;
-  grid-row: 8/12;
-}
-
-#puzzlesitemap{
-  grid-column: 6/8;
-  grid-row: 8/12;
-}
-
-#strategysitemap{
-  grid-column: 8/10;
-  grid-row: 8/12;
-}
-
-#actionsitemap{
-  grid-column: 10/12;
-  grid-row: 8/12;
+  grid-row: 1/2;
 }
 
 #aboutsitemap{
-  grid-column: 4/6;
-  grid-row: 12/16;
+  grid-column: 2/4;
+  grid-row: 2/3;
 }
 
-#gtasitemap{
-  grid-column: 6/8;
-  grid-row: 12/16;
+#popularsitemap{
+  grid-column: 1/5;
+  grid-row: 3/8;
+  margin-left: 1vw;
+  margin-right: 1vw;
 }
 
-#csgositemap{
-  grid-column: 8/12;
-  grid-row: 12/16;
+#fpssitemap{
+  grid-column: 5/10;
+  grid-row: 3/8;
+  margin-left: 1vw;
+  margin-right: 1vw;
 }
 
-#hollowsitemap{
-  grid-column: 4/6;
-  grid-row: 16/20;
+#rpgsitemap{
+  grid-column: 10/15;
+  grid-row: 3/8;
+  margin-left: 1vw;
+  margin-right: 1vw;
 }
 
-#fifasitemap{
-  grid-column: 6/8;
-  grid-row: 16/20;
+#sportsitemap{
+  grid-column: 1/5;
+  grid-row: 8/13;
+  margin-left: 1vw;
+  margin-right: 1vw;
 }
 
-#minecraftsitemap{
-  grid-column: 8/10;
-  grid-row: 16/20;
+#platformersitemap{
+  grid-column: 5/10;
+  grid-row: 8/13;
+  margin-left: 1vw;
+  margin-right: 1vw;
 }
 
-#overwatchsitemap{
-  grid-column: 6/8;
-  grid-row: 20/24;
+#horrorsitemap{
+  grid-column: 10/15;
+  grid-row: 8/13;
+  margin-left: 1vw;
+  margin-right: 1vw;
 }
+
+#racingsitemap{
+  grid-column: 1/5;
+  grid-row: 13/18;
+  margin-left: 1vw;
+  margin-right: 1vw;
+}
+
+#adventuresitemap{
+  grid-column: 5/10;
+  grid-row: 13/18;
+  margin-left: 1vw;
+  margin-right: 1vw;
+}
+
+#fightingsitemap{
+  grid-column: 10/15;
+  grid-row: 13/18;
+  margin-left: 1vw;
+  margin-right: 1vw;
+}
+
+#puzzlesitemap{
+  grid-column: 1/5;
+  grid-row: 18/23;
+  margin-left: 1vw;
+  margin-right: 1vw;
+}
+
+#strategysitemap{
+  grid-column: 5/10;
+  grid-row: 18/23;
+  margin-left: 1vw;
+  margin-right: 1vw;
+}
+
+#actionsitemap{
+  grid-column: 10/15;
+  grid-row: 18/23;
+  margin-left: 1vw;
+  margin-right: 1vw;
+}
+
 
 
 
@@ -860,6 +863,77 @@ main section.tutorial nav ul li{
 .ufovid2{
   grid-column: 6/8;
   grid-row: 2/4;
+}
+
+.gridmtchiliad{
+  display: grid;
+  grid-template-columns: repeat(12,1fr);
+  grid-template-rows: repeat(12,minmax(150px,auto));
+}
+
+.gridmtchiliad p{
+  font-size: 1.3em;
+}
+
+.mtchiliadtext{
+  grid-column: 1/8;
+  grid-row: 1/4;
+}
+
+
+.mtchiliadtext2{
+  grid-column: 1/13;
+  grid-row: 4/6;
+}
+
+
+.mtchiliadvid{
+  grid-column: 8/12;
+  grid-row: 1/4;
+  margin-left: 1vw;
+  margin-right: 1vw;
+}
+
+/* gta tutorial cheats section */
+.gridcheats{
+  display: grid;
+  grid-template-columns: repeat(10,1fr);
+  grid-template-rows: repeat(10,minmax(150px,auto));
+}
+
+.cheatstable{
+  grid-column: 1/10;
+  grid-row: 1/20;
+}
+
+#toptablecheats th{
+  background-color: #F8941C;
+}
+
+#toptablecheats td{
+  background-color: #F8941C;
+}
+
+.cheatstable table,th,td {
+  color: #fff;
+  border: 1px solid #ffffff;
+  width: 73vw;
+}
+
+.cheatstable th {
+  width: 20vw;
+  height: 5vh;
+}
+
+.cheatstable td{
+  width: 80vw;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+#toptablecheats{
+  padding: 10px;
+  color: #F8941C;
 }
 
 /* gta tutorial character section  */
