--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -835,12 +835,10 @@ main section.tutorial nav ul li{
 
 .warningtext{
   margin: 0 auto;
-  position: absolute;
-  margin-top: 7vh;
-  margin-left: 5vw;
   background-color: #F8941C;
   padding: 10px;
   border: 5px solid rgb(0, 0, 0);
+  width: fit-content;
 }
 
 .warningtextcheat{
